# go-protobuf-cpp-gen

./: .gitignore  LICENSE  README.md  go.mod  go.sum
.github/: renovate.json
.github/workflows/: tests.yml
cmd/protoc-gen-cpp-lite/: main.go
compiler/: compile.go  resolver.go
generator/: config.go  features.go  generated_file.go  generator.go  generator_test.go  helpers.go
generator/base/: enum.go  header.go  message.go  source.go
generator/genfile/: genfile.go
internal/naming/: naming.go  naming_test.go
internal/types/: types.go  types_test.go
testdata/: simple.proto
tests/e2e/: CMakeLists.txt  e2e_test.go
tests/e2e/cpp/: compile_test.cpp  enum_test.cpp  map_test.cpp  nested_test.cpp  repeated_test.cpp  scalar_test.cpp  serialize_test.cpp
tests/e2e/protos/: common.proto  enums.proto  imports.proto  maps.proto  nested.proto  repeated.proto  scalars.proto
